# Simple-Storage-Service

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clone_submodule.sh  vcpkg.json
S3Auth/: CMakeLists.txt
S3Common/: CMakeLists.txt  JsonValidation.cpp  JsonValidation.h
S3Core/: CMakeLists.txt
S3FileStorage/: Bucket.cpp  Bucket.h  CMakeLists.txt  FileStorage.cpp  FileStorage.h
S3MetaDB/: CMakeLists.txt  S3MetaDB.cpp  S3MetaDB.h  S3MetaDB.sql
S3RestAPI/: .env.development  README.md  build.sh  go.mod  go.sum  run.sh
S3RestAPI/cmd/restapi/: main.go
S3RestAPI/internal/controllers/: auth_controller.go  bucket_controller.go  file_controller.go  health_controller.go  task_controller.go
S3RestAPI/internal/middleware/: auth.go
S3RestAPI/internal/models/: request.go
S3RestAPI/internal/transport/: rabbitmq.go  redis.go
S3Service/: CMakeLists.txt  Configurations.cpp  Configurations.h  S3Service.cpp  S3Service.h  main.cpp  s3_service_configurations.json
